# chatbot-arena-leaderbord-vis

./: README.md  app.py  arena_hard_auto_leaderboard_v0.1.csv  convert_to_json.py  elo_data.json  elo_history_viz.py  elo_results_20230508.pkl  elo_results_20230905.pkl  elo_results_20231002.pkl  elo_results_20240118.pkl  elo_results_20240125.pkl  elo_results_20240202.pkl  elo_results_20240215.pkl  elo_results_20240305.pkl  elo_results_20240307.pkl  elo_results_20240313.pkl  elo_results_20240326.pkl  elo_results_20240327.pkl  elo_results_20240329.pkl  elo_results_20240403.pkl  elo_results_20240409.pkl  elo_results_20240410.pkl  elo_results_20240411.pkl  elo_results_20240413.pkl  elo_results_20240418.pkl  elo_results_20240419.pkl  elo_results_20240422-2.pkl  elo_results_20240422.pkl  elo_results_20240426.pkl  elo_results_20240501.pkl  elo_results_20240508.pkl  elo_results_20240515.pkl  elo_results_20240516.pkl  elo_results_20240519.pkl  elo_results_20240520.pkl  elo_results_20240527.pkl  elo_results_20240602.pkl  elo_results_20240606.pkl  elo_results_20240611.pkl  elo_results_20240617.pkl  (+179 more)
.github/workflows/: deploy.yml
